--- a/src/styles.css
+++ b/src/styles.css
@@ -4,12 +4,19 @@
 @tailwind components;
 @tailwind utilities;
 
-.active {
-    background-color: #fff;
+.section-nav div.active > a {
     color: #fff;
     text-decoration: none;
   }
 
 *{
     scroll-behavior: smooth;
+}
+
+.btn{
+  @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider border-2 border-white w-1/4 mb-4 hover:bg-white hover:text-black transition ease-linear duration-300;
+}
+
+.card{
+  @apply w-full justify-items-center overflow-hidden text-center text-sm text-white rounded-xl
 }
